--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8">
+    <title>UI Developer || Umur Alpay</title>
+    <meta name="description" content="Personal website & portfolio of Umur Alpay">
     <link type="text/css" rel="stylesheet" href="assets/main.css" />
   </head>
   <body>
